added simplemessage page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>reacode.in</title>
+    <title>simplemessage.in</title>
   </head>
   <body>
-    <h1>readcode.in has been discontinued</h1>
-    <p>send a mail to readcode at cosmicvent.com if you need any more info</p>
+    <h1>simplemessage.in has been discontinued</h1>
+    <p>send a mail to simplemessage at cosmicvent.com if you need any more info</p>
   </body>
 </html>
